crates/core/tests/snapshots/general__invalid_token.snap
---
source: crates/core/tests/general.rs
expression: "err.pretty_print(false, code, \"<code>\")"
---
error: Invalid token
 --> <code>:1:5
  |
1 | x = \
  |     ^

